<resources>
    <string name="app_name">Hito4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="asistentes">Asistentes</string>
    <string name="programa">Programa</string>
    <string name="fechas">Fechas</string>
    <string name="localizacion">Localización</string>
    <string name="string_correo1">antonio.sanchmunoz@alum.uca.es</string>
    <string name="string_correo2">luis.decelismunoz@alum.uca.es</string>
    <string name="ocelot_company">Ocelot Company</string>
    <string name="menu_asistentes">Asistentes</string>
    <string name="menu_programa">Programa</string>
    <string name="menu_fechas">Fechas</string>
    <string name="menu_localizacion">Localización</string>
    <string name="anadir_asistente">Añadir Asistente</string>
    <string name="eliminar_asistente">¿Eliminar asistente?</string>
    <string name="add_widget">Add widget</string>
    <string name="contenido_localizacion">El lugar de celebración será en el puerto de Cádiz en el que se extenderá una carpa para evitar el sol y en el que contaremos con un escenario para los shows previstos</string>
    <string name="titulo_localizacion">Lugar de celebración</string>
    <string name="link_localizacion">https://www.puertocadiz.com</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="nombre">Nombre:</string>
    <string name="dni">DNI:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="fecha_de_inscripcion">Fecha de inscripción:</string>
    <string name="descripcion_ocelote">Carlos \'Ocelote\' Rodríguez Santiago es un jugador retirado conocido por jugar en SK Gaming. Es el fundador de Gamers2, ahora llamado G2 Esports.</string>
    <string name="nombre_ocelote">Carlos \'Ocelote\' Rodríguez</string>
    <string name="nombre_ibai">Ibai Llanos</string>
    <string name="descripcion_ibai">Ibai \'Ibai\' Llanos es un Shoutcaster de League of Legends español. Ahora trabaja en G2 Esports</string>
    <string name="nombre_faker">Lee \'Faker\' Sang-Hyeok</string>
    <string name="descripcion_faker">Lee \'Faker\' Sang-hyeok (Hangul: 이상혁) es un jugador de esports de League of Legends, actualmente jugador y copropietario en T1.</string>
</resources>
