<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_asistentes">

    <fragment
        android:id="@+id/nav_asistentes"
        android:name="es.uca.hito4.asistentes.AsistentesFragment"
        android:label="@string/menu_asistentes"
        tools:layout="@layout/fragment_asistentes" />

    <fragment
        android:id="@+id/nav_programa"
        android:name="es.uca.hito4.programa.ProgramaFragment"
        android:label="@string/menu_programa"
        tools:layout="@layout/fragment_programa" />

    <fragment
        android:id="@+id/nav_fechas"
        android:name="es.uca.hito4.fechas.FechasFragment"
        android:label="@string/menu_fechas"
        tools:layout="@layout/fragment_fechas" />

    <fragment
        android:id="@+id/nav_localizacion"
        android:name="es.uca.hito4.localizacion.LocalizacionFragment"
        android:label="@string/menu_localizacion"
        tools:layout="@layout/fragment_localizacion" />

</navigation>