<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="60dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/negro"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        android:textColor="@color/negro"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/dni"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel_fono"
        android:textColor="@color/negro"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento"
        android:textColor="@color/negro"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_inscripcion"
        android:textColor="@color/negro"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/fecha_inscripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:paddingBottom="10dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageButton
            android:id="@+id/confirm_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bordes_redondos"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_confirm" />

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bordes_redondos"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>